--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   min-height: 100%;
   margin: 0;
   color: #3B4043;
-  background-color: #68C2E2;
+  background-color: #46CCF5;
 }
 
 img {
@@ -116,8 +116,6 @@ a {
 #ltBlock2128608155 .main-container {
   display: none;
   height: auto!important;
-  margin-left: 20px;
-  margin-right: 20px;
   background-color: #FCFEFE!important;
 }
 
