--- a/style-about-us.css
+++ b/style-about-us.css
@@ -55,6 +55,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    overflow: hidden;
 }
 
 #ltBlock2129045428 .container::after {
@@ -69,6 +70,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    overflow: hidden;
+    /* display: none; */
 }
 
 @media screen and (min-width: 481px) {
