--- a/style-header-for-video.css
+++ b/style-header-for-video.css
@@ -1,3 +1,7 @@
+#ltBlock2130094094 .lt-block-wrapper {
+    margin-bottom: 0px;
+}
+
 #ltBlock2130094094 .container {
     border-radius: 0px;
     margin: 0px;
