--- a/style_headers.css
+++ b/style_headers.css
@@ -1,5 +1,6 @@
 #ltBlock2131488542 .lt-block-wrapper,
-#ltBlock2131488725 .lt-block-wrapper {
+#ltBlock2131488725 .lt-block-wrapper,
+#ltBlock2131488726 .lt-block-wrapper{
     margin: 0 auto;
     max-width: 1050px;
     min-width: 320px;
@@ -12,7 +13,8 @@
 }
 
 #ltBlock2131488542 .container,
-#ltBlock2131488725 .container {
+#ltBlock2131488725 .container,
+#ltBlock2131488726 .container {
     margin: 0 0px;
     padding: 20px;
     background-color: #FCFEFE;
@@ -23,12 +25,14 @@
 }
 
 #ltBlock2131488542 .container  .builder-item.part-header.text-center,
-#ltBlock2131488725 .container .builder-item.part-header.text-center{
+#ltBlock2131488725 .container .builder-item.part-header.text-center,
+#ltBlock2131488726 .container .builder-item.part-header.text-center {
     margin-bottom: 0!important;
 }
 
 #ltBlock2131488542 .f-header.f-header-64,
-#ltBlock2131488725 .f-header.f-header-64 {
+#ltBlock2131488725 .f-header.f-header-64,
+#ltBlock2131488726 .f-header.f-header-64 {
     font-family: "Bahnschrift", Arial, Helvetica, sans-serif;
     font-stretch: 87%;
     text-decoration: none;
@@ -38,7 +42,8 @@
     text-align: center;
 }
 /* subheader */
-#ltBlock2131488725 .f-subheader.f-subheader-sm.f-text-transform-uppercase {
+#ltBlock2131488725 .f-subheader.f-subheader-sm.f-text-transform-uppercase,
+#ltBlock2131488726 .f-subheader.f-subheader-sm.f-text-transform-uppercase {
     font-family: "Bahnschrift", Arial, Helvetica, sans-serif;
     font-stretch: 87%;
     text-decoration: none;
@@ -48,15 +53,24 @@
     text-align: center;
 }
 
-#ltBlock2131488725 .builder-item.part-subheader {
+#ltBlock2131488725 .builder-item.part-subheader,
+#ltBlock2131488726 .builder-item.part-subheader {
     margin-bottom: 0px!important;
     padding-top: 10px;
+}
+
+@media screen and (min-width: 576px) {
+    #ltBlock2131488725 .f-subheader.f-subheader-sm.f-text-transform-uppercase,
+    #ltBlock2131488726 .f-subheader.f-subheader-sm.f-text-transform-uppercase {
+        font-size: 1.2rem;
+    }
 }
 
 
 @media screen and (min-width: 768px) {
     #ltBlock2131488542 .lt-block-wrapper,
-    #ltBlock2131488725 .lt-block-wrapper {
+    #ltBlock2131488725 .lt-block-wrapper,
+    #ltBlock2131488726 .lt-block-wrapper {
         padding-left: 30px;
         padding-right: 30px;
     }
@@ -64,12 +78,21 @@
     #ltBlock2131488542 .lt-block-wrapper {
         margin-bottom: 30px;
     }
+
+    /*subheader*/
+    #ltBlock2131488725 .f-subheader.f-subheader-sm.f-text-transform-uppercase,
+    #ltBlock2131488726 .f-subheader.f-subheader-sm.f-text-transform-uppercase {
+        font-size: 1.23rem;
+        padding-right: 35px;
+        padding-left: 35px;
+    }
 }
 
 @media screen and (min-width: 900px) {
     
     #ltBlock2131488542 .lt-block-wrapper,
-    #ltBlock2131488725 .lt-block-wrapper {
+    #ltBlock2131488725 .lt-block-wrapper,
+    #ltBlock2131488726 .lt-block-wrapper {
         padding-left: 65px;
         padding-right: 65px;
     }
