--- a/style_headers.css
+++ b/style_headers.css
@@ -32,7 +32,8 @@
 
 #ltBlock2131488542 .f-header.f-header-64,
 #ltBlock2131488725 .f-header.f-header-64,
-#ltBlock2131488726 .f-header.f-header-64 {
+#ltBlock2131488726 .f-header.f-header-64,
+#ltBlock2131488734 .f-header.f-header-64 {
     font-family: "Bahnschrift", Arial, Helvetica, sans-serif;
     font-stretch: 87%;
     text-decoration: none;
